--- a/public/tests.html
+++ b/public/tests.html
@@ -74,5 +74,108 @@
     </style>
 </head>
 
+<body>
+    <!-- <img src="" alt="Company Logo" class="watermark" style="width: 400px; height: auto;" /> -->
+
+    <!-- Table layout for logo and invoice type -->
+    <table style="width: 100%; margin-bottom: 20px; padding-left: 0px; border: none;">
+        <tr style="border: 0px solid #fff; padding-left: 0px;">
+            <td style="width: 30%; vertical-align: top; border: 0px solid #fff; padding-left: 0px;">
+                <h1>Pro-Forma</h1>
+            </td>
+            <td style="width: 40%; vertical-align: top; border: 0px solid #fff"></td>
+            <td style="width: 30%; text-align: right; border: 0px solid #fff">
+                <!-- <img src="https://test.ventureinnovo.com/static/media/logo.a51192bf9b20006900d6.png" alt="Company Logo" class="logo" /> -->
+            </td>
+        </tr>
+    </table>
+
+    <!-- Table layout for billing sections -->
+    <table style="width: 100%; margin-bottom: 0px; padding-left: 0px; border: none;">
+        <tr style="border: 0px solid #fff; padding-left: 0px;">
+            <td style="width: 40%; vertical-align: top; border: 0px solid #fff; padding-left: 0px;">
+                <div class="section-bill-from padding-left: 0px;">
+                    <h2>From</h2>
+                    <p>Cone Agro &amp; Logistics </p>
+                    <p>Pantang-Asore Junc. PnT, Pantang Abokobi Road</p>
+                </div>
+            </td>
+            <td style="width: 40%; vertical-align: top; border: 0px solid #fff">
+                <div class="section-bill-to">
+                    <h2>Bill To</h2>
+                    <p>BUI POWER AUTHORITY</p>
+                    <p> </p>
+                </div>
+            </td>
+        </tr>
+    </table>
+
+    <div class="section">
+        <h2>Pro-Forma Details</h2>
+        <p>Pro-Forma Number: 00230704197</p>
+        <p>Date: 2024-11-26</p>
+    </div>
+
+    <div class="section">
+        <h2>Items</h2>
+        <table>
+            <thead>
+                <tr>
+                    <th>Description</th>
+                    <th>Quantity</th>
+                    <th>Price</th>
+                    <th>Total</th>
+                </tr>
+            </thead>
+            <tbody>
+
+                <tr>
+                    <td>265/65/R17 - 112 S</td>
+                    <td>6</td>
+                    <td> 4812.00</td>
+                    <td class="text-right"> 28872.00</td>
+                </tr>
+
+                <tr>
+                    <td>225/60/R17 - 98 H</td>
+                    <td>7</td>
+                    <td> 5615.60</td>
+                    <td class="text-right"> 39309.20</td>
+                </tr>
+
+                <tr>
+                    <td>225/70/R17C - 108/106 </td>
+                    <td>7</td>
+                    <td> 4812.00</td>
+                    <td class="text-right"> 33684.00</td>
+                </tr>
+
+
+                <tr style="padding-top: 0px; margin-top: 0px; border: 1px solid #000">
+                    <td style="border: 0px solid #fff !important"></td>
+                    <td style="border: 0px solid #fff !important"></td>
+                    <td style="border: 0px solid #fff !important"></td>
+                    <td class="text-right" style="border: 0px solid #fff">
+                        <div class="section-total">
+
+
+
+                            <p>Subtotal: GHS 101865.20</p>
+
+                            <p>Tax (4%): GHS 4074.61</p>
+
+                            <p class="total">Total: GHS 105939.81</p>
+                        </div>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <div class="section">
+        <h2>Notes</h2>
+        <p>This is for the purchase of goods and services</p>
+    </div>
+</body>
 
 </html>
