--- a/public/tests.html
+++ b/public/tests.html
@@ -1,31 +1,48 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-    <title>Pro-Forma</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            padding: 20px;
-        }
+<title>Invoice</title>
+<style>
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    width: 100%;
+}
+.header {
+    width: 100px;
+    background-color: #3B82F6;
+    padding: 20px;
+    border-radius: 100px 0 100px 0;
+    position: relative;
+    overflow: hidden;
+    float: left;
+    padding-bottom: 50px;
+    margin-bottom: 50px;
+    clear: both;
+}
+.footer {
+    width: 100px;
+    background-color: #3B82F6;
+    padding: 20px;
+    border-radius: 100px 0 100px 0;
+    position: relative;
+    overflow: hidden;
+    float: right;
+    padding-bottom: 50px;
+    margin-bottom: 50px;
+    clear: both;
+}
 
-        h1 {
-            font-size: 24px;
-            margin-bottom: 10px;
-        }
 
-        .text-right {
-            text-align: right;
-        }
-    </style>
+</style>
 </head>
-
 <body>
-    
 
+    <div class="header">
+    </div>
+
+<div class="footer">
+</div>
 
 </body>
-
 </html>
